# image-manipulation-datasets

./: .gitignore  README.md  setup.cfg
src/datasets/: casia2.py  coverage.py  defacto.py
src/image_manip/: base.py  casia2.py  coverage.py  datasets.py  defacto.py  imd2020.py  utils.py
src/image_manipulation_datasets.egg-info/: PKG-INFO  SOURCES.txt
