[metadata]
name = image-manipulation-datasets
version = 0.6.11
author = Spencer Cain
author_email = smcain@fsu.edu
description = A collection of image manipulation dataset classes implemented in PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cainspencerm/image-manipulation-datasets
project_urls =
    Bug Tracker = https://github.com/cainspencerm/image-manipulation-datasets/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
